# vanguard-ics-guardian

./: .gitignore  README.md  build_output.txt  trunk_output.txt  vercel.json
.github/workflows/: deploy.yml
cli/: README.md  package.json  run.mjs
dashboard/: Cargo.toml  Trunk.toml  check.txt  check2.txt  check_output.txt  index.html  styles.css
dashboard/assets/wasm/: malicious_driver.core.wasm  runner.js
dashboard/assets/wasm/shims/: sensor-fs.js  sensor-net.js  sensor-utils.js
dashboard/assets/wasm/shims/preview2-shim/: cli.js  filesystem.js  io.js
dashboard/src/: lib.rs
docs/: ARCHITECTURE.md  BRANCHING.md  HARDWARE-SETUP.md  SECURITY.md
guest/: Cargo.toml
guest/src/: bindings.rs  lib.rs
host/: package.json  runner.mjs
host/shim/: cli.js  filesystem.js  io.js  sockets.js
host/test/: shims.test.js
legacy/: README.md  full.Dockerfile  minimal.Dockerfile  ml.Dockerfile  sensor_full.py  sensor_minimal.py  sensor_ml.py
wit/: world.wit
